--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -14,7 +14,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb2;AttachDBFilename=|DataDirectory|\DiabDb2.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
