--- a/MySelf.Diab.Model/MySelf.Diab.Model.csproj
+++ b/MySelf.Diab.Model/MySelf.Diab.Model.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoodType.cs" />
     <Compile Include="Friend.cs" />
     <Compile Include="GlucoseLevel.cs" />
     <Compile Include="LogMessage.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="FriendActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityLink.cs" />
+    <Compile Include="Food.cs" />
     <Compile Include="Terapy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
