--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -15,9 +15,9 @@
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DiabDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -124,11 +124,11 @@
 		 -->
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+    <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
       </parameters>
-    </defaultConnectionFactory>
+    </defaultConnectionFactory>-->
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
