--- a/MySelf.Diab.Data/MySelf.Diab.Data.csproj
+++ b/MySelf.Diab.Data/MySelf.Diab.Data.csproj
@@ -75,6 +75,14 @@
     <Compile Include="Migrations\201512040929150_RemovedFoodType.Designer.cs">
       <DependentUpon>201512040929150_RemovedFoodType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512061807213_RefactoredFoodTypesAsList.cs" />
+    <Compile Include="Migrations\201512061807213_RefactoredFoodTypesAsList.Designer.cs">
+      <DependentUpon>201512061807213_RefactoredFoodTypesAsList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512061815239_RefactoredFoodTypesAsString.cs" />
+    <Compile Include="Migrations\201512061815239_RefactoredFoodTypesAsString.Designer.cs">
+      <DependentUpon>201512061815239_RefactoredFoodTypesAsString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelConfigurations\FoodConfiguration.cs" />
     <Compile Include="ModelConfigurations\TerapyConfiguration.cs" />
@@ -125,6 +133,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512040929150_RemovedFoodType.resx">
       <DependentUpon>201512040929150_RemovedFoodType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512061807213_RefactoredFoodTypesAsList.resx">
+      <DependentUpon>201512061807213_RefactoredFoodTypesAsList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512061815239_RefactoredFoodTypesAsString.resx">
+      <DependentUpon>201512061815239_RefactoredFoodTypesAsString.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
