--- a/MySelf.WebClient/packages.config
+++ b/MySelf.WebClient/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Angular.UI.Bootstrap" version="0.6.0" targetFramework="net45" />
+  <package id="Angular.UI.Bootstrap" version="1.1.2" targetFramework="net45" />
   <package id="angularjs" version="1.0.8" targetFramework="net45" />
+  <package id="AngularJS.Animate" version="1.4.9" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.4.9" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.4.9" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.1.1" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
