--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -658,7 +658,9 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Properties\PublishProfiles\Copy and paste.pubxml" />
+    <None Include="Properties\PublishProfiles\myselflog - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\myselflog - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\myselflog - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\myselflog - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\webdeploy.pubxml" />
     <Content Include="Scripts\angular.min.js.map" />
